<resources>
    <string name="app_name">Glimpse</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>

    <string name="sign_up_description">Just a few quick thing to get started</string>
    <string name="sign_in_description">Hello, welcome back</string>
    <string name="sign_up_already_have_account">Already have an account? Log in</string>
    <string name="sign_in_already_have_account">Don\'t have an account? Sign up</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fill_your_profile">Fill your profile</string>

    <string name="add_your_promts">Your prompts</string>
    <string name="add_text_prompt">Text</string>
    <string name="add_image_prompt">Image</string>
    <string name="empty_prompts_add">It seems that you do not have enough prompts, at least 2 required: 1 image and 1 text.\nLet\'s add them!</string>
    <string name="prompt">Prompt</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="load_image">Load image</string>
    <string name="image_is_loaded">Image is loaded</string>
    <string name="image_is_not_loaded">Image is not loaded</string>
    <string name="you_should_load_image">You should load image!</string>
    <string name="error">Error</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Fill your birth date</string>
    <string name="set">Set</string>
    <string name="sex">Sex</string>
    <string name="preferred_partner">Preference</string>
    <string name="intention">Intention</string>
    <string name="height">Height</string>
    <string name="has_children">Has children</string>
    <string name="family_plans">Family plans</string>
    <string name="drinks_alcohol">Drinks alcohol</string>
    <string name="smokes">Smokes</string>

    <string name="profile">Profile</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="prompts">Prompts</string>
    <string name="edit_your_prompts">Edit your prompts</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="sample_error_message">Something went wrong</string>

    <string name="your_turn">Your turn (%1$s)</string>
    <string name="their_turn">Their turn (%1$s)</string>

    <string name="send_reaction">Send reaction</string>
    <string name="your_comment">Your comment</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>

    <string name="message">Message</string>

    <string name="no_likes_at_the_moment">No likes at the moment</string>
    <string name="no_matches_yet">No matches yet</string>
</resources>
