<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/title"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/fill_your_profile"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/birth_date"
                android:inputType="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:fontFamily="@font/along_sanss2_regular"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_date"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:text="@string/set" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/along_sanss2_regular"
                    android:hint="@string/sex"
                    android:inputType="none"
                    app:simpleItems="@array/sex" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/preferred_partner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/along_sanss2_regular"
                    android:hint="@string/preferred_partner"
                    android:inputType="none"
                    app:simpleItems="@array/preferred_type" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/intention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:hint="@string/intention"
                android:inputType="none"
                app:simpleItems="@array/intention" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/has_children"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:hint="@string/has_children"
                android:inputType="none"
                app:simpleItems="@array/no_yes" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">

            <AutoCompleteTextView
                android:id="@+id/family_plans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:hint="@string/family_plans"
                android:inputType="none"
                app:simpleItems="@array/family_plans" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/drinks_alcohol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:hint="@string/drinks_alcohol"
                android:inputType="none"
                app:simpleItems="@array/drinks_alcohol" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">

            <AutoCompleteTextView
                android:id="@+id/smokes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/along_sanss2_regular"
                android:hint="@string/smokes"
                android:inputType="none"
                app:simpleItems="@array/smokes" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
