<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="32dp"
        android:text="@string/send_reaction"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/your_comment"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/along_sanss2_regular"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
