<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Glimpse"
        app:titleTextAppearance="@style/text_toolbar" />

    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:src="@drawable/example_girl"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/md_theme_light_primary"
            app:strokeWidth="4dp" />

        <TextView
            android:id="@+id/name"
            style="@style/text_h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            tools:text="Florence" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileLayout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profileCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="32dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#DDDDDD"
                    android:scaleType="center"
                    android:src="@drawable/account_circle_outline"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_body_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile" />

                    <TextView
                        style="@style/text_caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_your_profile" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/promptsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:elevation="32dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#DDDDDD"
                    android:scaleType="center"
                    android:src="@drawable/cards_variant"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_body_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompts" />

                    <TextView
                        style="@style/text_caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_your_prompts" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FFFFFF"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
